<resources>
    <string name="app_name">Air Hockey</string>
    <string name="play_button">Play</string>
    <string name="difficulty_textview">Difficulty</string>
    <string name="red_victory">Red Wins!</string>
    <string name="blue_victory">Blue Wins!</string>
    <string name="preferences_file_key">com.davidkaluta.airhockey.PREFERENCES_FILE_KEY</string>
    <string name="victories_key">com.davidkaluta.airhockey.VICTORIES_KEY</string>
    <string name="victories_key_easy">com.davidkaluta.airhockey.VICTORIES_KEY_EASY</string>
    <string name="victories_key_medium">com.davidkaluta.airhockey.VICTORIES_KEY_MEDIUM</string>
    <string name="victories_key_hard">com.davidkaluta.airhockey.VICTORIES_KEY_HARD</string>
    <string name="victories_key_2players">com.davidkaluta.airhockey.VICTORIES_KEY_2PLAYERS</string>
    <string name="credits_button">Credits</string>
    <string name="goal">GOAL!</string>
    <string name="good_job_champ">(Good job, champ!)</string>
    <string name="created_by">created by</string>
    <string name="david_kaluta">David Kaluta</string>
    <string name="twitter_tag">(@DavidKaluta on Twitter)</string>
    <string name="music_by">music by</string>
    <string name="musician">rezoner</string>
    <string name="song_name">(the song is called happy.mp3)</string>
    <string name="x11_license">the MIT license</string>
    <string name="this_app_uses">this app uses</string>
    <string name="aka">(also known as the X11 license)</string>
    <string name="you_won_a_total_of">you won a total of</string>
    <string name="times_won">%d times!</string>
    <string name="times_won_easy">%d wins on easy</string>
    <string name="times_won_medium">%d wins on medium</string>
    <string name="times_won_hard">%d wins on hard</string>
    <string name="times_won_2player">%d wins against other players</string>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>BRUTAL</item>
        <item>2 Players</item>
    </string-array>
</resources>
